<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/id_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/cargo_info"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20" />

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/iv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/space_10"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="@dimen/space_5"
            android:text="@string/select"
            android:textColor="@color/colorWhite"
            android:theme="@style/BaseTextView"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/iv_waybill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/space_10"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="@dimen/space_5"
            android:text="@string/creat_waybill"
            android:textColor="@color/colorWhite"
            android:theme="@style/BaseTextView"
            android:visibility="gone" />
    </RelativeLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:paddingRight="@dimen/space_10"
        android:paddingLeft="@dimen/space_10"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <android.support.v7.widget.RecyclerView

            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="@dimen/space_1"
            android:layout_height="@dimen/space_1" />
        <requestFocus />

        <com.lcd.shipping.dh.module.info_cargo.CargoInfoLayout
            android:id="@+id/cargoInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnreserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"
            android:text="@string/reserve"
            android:theme="@style/BaseButton"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnreceive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"
            android:text="@string/receive"
            android:theme="@style/BaseButton"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnrefuse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"
            android:text="@string/refuse"
            android:theme="@style/BaseButton"
            android:visibility="gone" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"
            android:text="@string/release"
            android:theme="@style/BaseButton"
            android:visibility="gone"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnReleaseCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"

            android:text="@string/cancel_release"
            android:theme="@style/BaseButton"
            android:visibility="gone"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCopy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/copy"
            android:theme="@style/BaseButton"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"
            android:text="@string/message"
            android:visibility="gone"
            android:theme="@style/BaseButton"
             />
    </LinearLayout>
</LinearLayout>