<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lcd.shipping.dh.module.main.MainActivity">



    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_55"
        android:orientation="horizontal"
        android:padding="@dimen/space_5">

        <com.lcd.shipping.dh.view.ChangeColorIconWithTextView
            android:id="@+id/item_work_bench"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            zhy:icon="@drawable/icon_item_work_bench"
            zhy:text="@string/work_bench"
            zhy:text_size="@dimen/text_size_15" />

        <com.lcd.shipping.dh.view.ChangeColorIconWithTextView
            android:id="@+id/item_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            zhy:icon="@drawable/icon_item_msg"
            zhy:text="@string/message"
            zhy:text_size="@dimen/text_size_15" />

        <com.lcd.shipping.dh.view.ChangeColorIconWithTextView
            android:id="@+id/item_add_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            zhy:icon="@drawable/icon_item_add_book"
            zhy:text="@string/add_book"
            zhy:text_size="@dimen/text_size_15" />

        <com.lcd.shipping.dh.view.ChangeColorIconWithTextView
            android:id="@+id/item_my"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            zhy:icon="@drawable/icon_item_my"
            zhy:text="@string/my"
            zhy:text_size="@dimen/text_size_15" />
    </LinearLayout>
</LinearLayout>
