<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/id_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/letter"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_20" />

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/iv_waybill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/space_10"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="@dimen/space_5"
            android:text="@string/creat_waybill"
            android:textColor="@color/colorWhite"
            android:theme="@style/BaseTextView"
             />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:paddingRight="@dimen/space_10"
        android:paddingLeft="@dimen/space_10"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/include_letter_info" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnAgrLetter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"
            android:text="@string/agreed_letter"
            android:visibility="gone"
            android:theme="@style/BaseButton" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"
            android:text="@string/sign_cancel"
            android:visibility="gone"
            android:theme="@style/BaseButton" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLeaveMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_10"
            android:layout_weight="1"
            android:text="@string/leave_msg"
            android:visibility="gone"

            android:theme="@style/BaseButton" />
    </LinearLayout>
</LinearLayout>